crates/eml_cli/tests/snapshots/integration__ui__run@data__default_drops_a_value_with_fields.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/default_drops_a_value_with_fields.em
---
--- stdout ---
dot
other
other
--- stderr ---
