crates/eml_cli/tests/snapshots/integration__ui__run@data__function_fields.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/function_fields.em
---
--- stdout ---
42
16
--- stderr ---
