crates/eml_cli/tests/snapshots/integration__ui__run@data__long_list.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/long_list.em
---
--- stdout ---
5000050000
1
--- stderr ---
