crates/eml_cli/tests/snapshots/integration__ui__run@data__nullary_target_before_merge.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/nullary_target_before_merge.em
---
--- stdout ---
2
--- stderr ---
