crates/eml_cli/tests/snapshots/integration__ui__run@data__nullary_target_uses_scrutinee.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/nullary_target_uses_scrutinee.em
---
--- stdout ---
3
--- stderr ---
