crates/eml_cli/tests/snapshots/integration__ui__run@data__same_value_at_two_types.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/same_value_at_two_types.em
---
--- stdout ---
1
2
--- stderr ---
