crates/eml_cli/tests/snapshots/integration__ui__run@data__shared_scrutinee.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/shared_scrutinee.em
---
--- stdout ---
a / Some a / Some a
a / Some a / Some a
none / None
--- stderr ---
