crates/eml_cli/tests/snapshots/integration__ui__run@data__single_nullary_constructor.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/data/single_nullary_constructor.em
---
--- stdout ---
42
--- stderr ---
